tests/bad/test_cyclic.go
package main

type A struct {b B}
type B struct {c C}
type C struct {a A}

func main () {}
